<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_custom_snackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/scraped"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:theme="@style/TextAppearance.body01"
            android:layout_marginTop="17dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_custom_snackbar_folder"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@drawable/snackbar_btn_folder"
            android:text="@string/btn_folder"
            android:textColor="@color/white"
            android:theme="@style/TextAppearance.headline01"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_custom_snackbar_scrap"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/btn_scrapbook"
            android:paddingHorizontal="10dp"
            android:background="@drawable/snackbar_btn_scrapbook"
            android:textColor="@color/main_color"
            android:theme="@style/TextAppearance.headline01"
            android:includeFontPadding="false"
            android:layout_marginEnd="6dp"
            app:layout_constraintTop_toTopOf="@id/btn_custom_snackbar_folder"
            app:layout_constraintEnd_toStartOf="@id/btn_custom_snackbar_folder"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>