<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_scrap_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_scrap_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_scrap_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/notosans_bold"
            android:includeFontPadding="false"
            android:text="@string/scrap_title"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_scrap_back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="@+id/tv_scrap_nickname"
            app:layout_constraintEnd_toStartOf="@+id/tv_scrap_nickname"
            app:layout_constraintTop_toTopOf="@+id/tv_scrap_nickname" />

        <TextView
            android:id="@+id/tv_scrap_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:includeFontPadding="false"
            android:text="@string/scrap_nickname"
            android:textAppearance="@style/TextAppearance.caption02"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_scrap_title" />

        <TextView
            android:id="@+id/tv_scrap_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="14dp"
            android:includeFontPadding="false"
            android:text="@string/scrap_edit"
            android:textAppearance="@style/TextAppearance.headline02"
            android:textColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_scrap_nickname" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_scrap_folders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="-3dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_scrap_edit"
            app:spanCount="2"
            tools:listitem="@layout/item_folder" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>